cargo-geiger/tests/snapshots/integration_tests__test1_package_with_no_deps.stderr.snap
---
source: cargo-geiger/tests/integration_tests.rs
expression: stderr
---
`{ARTIFACT_JSON_BLOB}`
`{ARTIFACT_JSON_BLOB}`
