cargo-geiger/tests/snapshots/integration_tests__test2_package_with_shallow_deps.stderr.snap
---
source: cargo-geiger/tests/integration_tests.rs
expression: stderr
---
`{ARTIFACT_JSON_BLOB}`
`{ARTIFACT_JSON_BLOB}`
`{ARTIFACT_JSON_BLOB}`
`{ARTIFACT_JSON_BLOB}`
`{ARTIFACT_JSON_BLOB}`
`{ARTIFACT_JSON_BLOB}`
