cargo-geiger/tests/snapshots/integration_tests__test3_package_with_nested_deps.stderr.snap
---
source: cargo-geiger/tests/integration_tests.rs
expression: stderr
---
{"`{ARTIFACT_JSON_BLOB}`
{"`{ARTIFACT_JSON_BLOB}`
{"`{ARTIFACT_JSON_BLOB}`
{"`{ARTIFACT_JSON_BLOB}`
{"`{ARTIFACT_JSON_BLOB}`
{"`{ARTIFACT_JSON_BLOB}`
{"`{ARTIFACT_JSON_BLOB}`
{"`{ARTIFACT_JSON_BLOB}`
{"`{ARTIFACT_JSON_BLOB}`
{"`{ARTIFACT_JSON_BLOB}`
{"`{ARTIFACT_JSON_BLOB}`
{"`{ARTIFACT_JSON_BLOB}`
{"`{ARTIFACT_JSON_BLOB}`
{"`{ARTIFACT_JSON_BLOB}`
{"`{ARTIFACT_JSON_BLOB}`
{"`{ARTIFACT_JSON_BLOB}`

