cargo-geiger/tests/snapshots/integration_tests__test4_workspace_with_top_level_package.stderr.snap
---
source: cargo-geiger/tests/integration_tests.rs
expression: stderr
---
`{ARTIFACT_JSON_BLOB}`
`{ARTIFACT_JSON_BLOB}`
`{ARTIFACT_JSON_BLOB}`
`{ARTIFACT_JSON_BLOB}`

