cargo-geiger/tests/snapshots/integration_tests__test5_workspace_with_virtual_manifest.stderr.snap
---
source: cargo-geiger/tests/integration_tests.rs
expression: stderr
---
manifest path `{MANIFEST_PATH}` is a virtual manifest, but this command requires running against an actual package in this workspace
