cargo-geiger/tests/snapshots/integration_tests__test6_cargo_lock_out_of_date.stderr.snap
---
source: cargo-geiger/tests/integration_tests.rs
expression: stderr
---
`{ARTIFACT_JSON_BLOB}`
`{ARTIFACT_JSON_BLOB}`
`{ARTIFACT_JSON_BLOB}`
`{ARTIFACT_JSON_BLOB}`
`{ARTIFACT_JSON_BLOB}`
`{ARTIFACT_JSON_BLOB}`
`{ARTIFACT_JSON_BLOB}`
`{ARTIFACT_JSON_BLOB}`
`{ARTIFACT_JSON_BLOB}`
`{ARTIFACT_JSON_BLOB}`
`{ARTIFACT_JSON_BLOB}`
`{ARTIFACT_JSON_BLOB}`
`{ARTIFACT_JSON_BLOB}`
`{ARTIFACT_JSON_BLOB}`
`{ARTIFACT_JSON_BLOB}`
`{ARTIFACT_JSON_BLOB}`
