cargo-geiger/tests/snapshots/integration_tests__test7_package_with_patched_dep.stderr.snap
---
source: cargo-geiger/tests/integration_tests.rs
expression: stderr
---
{"`{ARTIFACT_JSON_BLOB}`
{"`{ARTIFACT_JSON_BLOB}`
{"`{ARTIFACT_JSON_BLOB}`
{"`{ARTIFACT_JSON_BLOB}`
{"`{ARTIFACT_JSON_BLOB}`
{"`{ARTIFACT_JSON_BLOB}`

